force-app/main/default/src/objects/echosign_dev1__SIGN_Recipients__c/echosign_dev1__SIGN_Recipients__c.object-meta.xml
<CustomObject>
    <label>Recipient</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>