force-app/main/default/src/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Email_Address__c</fullName>
    <description>Applicable for the Recipient Type = Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>