force-app/main/default/src/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Group__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>