force-app/main/default/src/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__ParticipantId__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__ParticipantId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ParticipantId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>