force-app/main/default/src/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Phone_Verification_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Phone_Verification_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Verification Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>