force-app/main/default/src/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Recipient_Message__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>