force-app/main/default/src/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Recipient_Workflow_Label__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Workflow_Label__c</fullName>
    <description>Recipient label defined in sign workflow</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Recipient label defined in sign workflow</inlineHelpText>
    <label>Recipient Workflow Label</label>
    <length>128</length>
    <type>Text</type>
</CustomField>